recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: identifier expected but ')' found.
    avance(100.)
               ^FourSquare:4: error: identifier expected but ')' found.
    droite(90.)
              ^FourSquare:5: error: identifier expected but ')' found.
    avance(100.)
               ^FourSquare:6: error: identifier expected but ')' found.
    droite(90.)
              ^FourSquare:7: error: identifier expected but ')' found.
    avance(100.)
               ^FourSquare:9: error: identifier expected but ')' found.
    avance(100.)
               ^FourSquare:10: error: identifier expected but ')' found.
    droite(180.)
               ^