recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  def carre() {
    avance(100.)
    droite(90.)
    avance(100.)
    droite(90.)
    avance(100.)
    droite()
    avance(100.)
    droite(180.)
  }
  carre()
  carre()
  carre()
}